--- a/todo
+++ b/todo
@@ -1,17 +1,16 @@
 TODO add password reset endpoint (requires session)
 
-TODO add goroutine channel processor that sends emails off of a queue
-TODO use SMTP-based validation to ensure that the email is valid, before sending the email via AWS SES
-     AWS may actually do this validation for us?
-
-TODO add email-confirmation endpoint (requires session)
-TODO add change email endpoint (requires session)
-TODO add resend-email-confirmation endpoint (requires session)
-
 TODO add forgot-slug endpoint (without session)
 TODO add forgot-password endpoint (without session)
+
+TODO use SMTP-based validation to ensure that the email is valid, before sending the email via AWS SES
+     AWS may actually do this validation for us?
 
 TODO create generic C-ABI-compatible SDK that interfaces with the openstats stats submission API
 TODO fork goldberg to integrate the C SDK
 
 TODO add account/data deletion
+
+DONE add email-confirmation endpoint (requires session)
+DONE add resend-email-confirmation endpoint (requires session)
+DONE add change email endpoint (requires session)
